# mip-project

./: README.md  input.xlsx  requirements.txt  setup.cfg
docs/: mip_procure_formulation.ipynb  remarks.md  todos.md
mip_procure/: __init__.py  __main__.py  constants.py  data_bridge.py  main.py  opt_model.py  schemas.py  utils.py
test_mip_procure/: README.md  test_local_execution.py  test_mip_procure_pkg.py  utils.py
test_mip_procure/app/output/: README.md
test_mip_procure/data/: output_schema.xlsx
test_mip_procure/data/inputs/: README.md  demand.csv  in_transit_shipments.csv  inventory.csv  inventory_capacities.csv  items.csv  min_inventory_wh.csv  parameters.csv  procurement_costs.csv  shipments.csv  sites.csv  time_periods.csv
test_mip_procure/data/outputs/: README.md  flow_supplier.csv  flow_warehouse.csv  kpis.csv  orders.csv  shipments.csv  total_inventory.csv
test_mip_procure/data/testing_data/: WIP_mip_procure_input_data_v2.xlsx  mip_procure_input_data_v2.xlsx  mip_procure_input_data_v2_small.xlsx  mip_procure_input_data_v2_small_12_weeks.xlsx
