[metadata]
name = mip_procure
version = attr: mip_procure.__version__
author = Mip Wise
author_email = contact@mipwise.com
description = Solution for a procurement and inventory optimization problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/mip_procure
project_urls =
    Bug Tracker = https://github.com/mipwise/mip_procure/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mip_procure
install_requires =
    ticdat>=0.2.22
    pandas>=1.4.3
    plotly>=5.13.1
    openpyxl>=3.0
    gurobipy>=10.0.2
python_requires = >=3.8
